--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@ node_modules/
 # Environment variables
 .env
 .env.local
+.env.production
+.env.development
+backend/.env
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
 
 # Build outputs
 build/
