--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "sqlite3": "^5.1.6",
     "body-parser": "^1.20.2",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
